[package]
name = "monzo-objects"
version = "0.1.0"
authors = ["Aatif Syed <aatif.syed@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
url = { version = "2.2.1", features = ["serde"] }
